--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "flux": "^3.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "4.0.3",
     "react-toastify": "^5.1.1"
   },
   "scripts": {
@@ -20,9 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
+  
   "browserslist": {
     "production": [
       ">0.2%",
