--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^16.9.0",
     "react-paginate": "^8.1.3",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^5.1.1"
   },
   "scripts": {
@@ -21,7 +21,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
